# libvalagram

./: README.md  index.html  meson.build
.forgejo/workflows/: auto-update.yml  push.yml
.github/workflows/: CI-auto-update.yml  CI-push.yml
auto-update/: update.sh  update_meson.py
build-aux/sisyphus/: libvalagram.spec
doc/: meson.build
lib/: client.vala  meson.build  requests-manager.vala  td-jsoner.vala  utils.vala
lib/objects/: accent-color.vala  accept-call.vala  accept-terms-of-service.vala  accepted-gift-types.vala  account-info.vala  account-ttl.vala  activate-story-stealth-mode.vala  active-story-state.vala  add-bot-media-preview.vala  add-chat-folder-by-invite-link.vala  add-chat-member.vala  add-chat-members.vala  add-chat-to-list.vala  add-checklist-tasks.vala  add-contact.vala  add-custom-server-language-pack.vala  add-favorite-sticker.vala  add-file-to-downloads.vala  add-gift-collection-gifts.vala  add-local-message.vala  add-log-message.vala  add-login-passkey.vala  add-message-reaction.vala  add-network-statistics.vala  add-offer.vala  add-pending-live-story-reaction.vala  add-pending-paid-message-reaction.vala  add-profile-audio.vala  add-proxy.vala  add-quick-reply-shortcut-inline-query-result-message.vala  add-quick-reply-shortcut-message-album.vala  add-quick-reply-shortcut-message.vala  add-recent-sticker.vala  add-recently-found-chat.vala  add-saved-animation.vala  add-saved-notification-sound.vala  add-sticker-to-set.vala  add-story-album-stories.vala  added-proxies.vala  added-proxy.vala  (+1647 more)
valagram-1/: TDJsonApi.create_client_id.html  TDJsonApi.execute.html  TDJsonApi.html  TDJsonApi.log_message_callback_ptr.html  TDJsonApi.receive.html  TDJsonApi.send.html  TDLib.AccentColor.AccentColor.html  TDLib.AccentColor.built_in_accent_color_id.html  TDLib.AccentColor.dark_theme_colors.html  TDLib.AccentColor.html  TDLib.AccentColor.id_.html  TDLib.AccentColor.light_theme_colors.html  TDLib.AccentColor.min_channel_chat_boost_level.html  TDLib.AcceptCall.AcceptCall.html  TDLib.AcceptCall.call_id.html  TDLib.AcceptCall.html  TDLib.AcceptCall.protocol.html  TDLib.AcceptTermsOfService.AcceptTermsOfService.html  TDLib.AcceptTermsOfService.html  TDLib.AcceptTermsOfService.terms_of_service_id.html  TDLib.AcceptedGiftTypes.AcceptedGiftTypes.html  TDLib.AcceptedGiftTypes.html  TDLib.AcceptedGiftTypes.limited_gifts.html  TDLib.AcceptedGiftTypes.premium_subscription.html  TDLib.AcceptedGiftTypes.unlimited_gifts.html  TDLib.AcceptedGiftTypes.upgraded_gifts.html  TDLib.AccountInfo.AccountInfo.html  TDLib.AccountInfo.html  TDLib.AccountInfo.last_name_change_date.html  TDLib.AccountInfo.last_photo_change_date.html  TDLib.AccountInfo.phone_number_country_code.html  TDLib.AccountInfo.registration_month.html  TDLib.AccountInfo.registration_year.html  TDLib.AccountTtl.AccountTtl.html  TDLib.AccountTtl.days.html  TDLib.AccountTtl.html  TDLib.ActivateStoryStealthMode.ActivateStoryStealthMode.html  TDLib.ActivateStoryStealthMode.html  TDLib.AddBotMediaPreview.AddBotMediaPreview.html  TDLib.AddBotMediaPreview.bot_user_id.html  (+13003 more)
vapi/: meson.build  tdjson.vapi
